--- a/public/stat120/Day11.html
+++ b/public/stat120/Day11.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- January 25 2024
+ January 26 2024
 
 
 ---
@@ -122,37 +122,6 @@ One way to test for ESP is with Zener cards:
 &gt; Subjects draw a card at random and telepathically communicate this to someone who then guesses the symbol
 
 
-&lt;!-- class: middle --&gt;
-
-&lt;!-- # Explaining Random Chance --&gt;
-
-
-&lt;!-- .pull-left.font80[ --&gt;
-&lt;!-- .bql.font80[ --&gt;
-&lt;!-- ## Random Chance with a Coin Toss --&gt;
-
-&lt;!-- - A fair coin has an **equal** chance of landing **heads** or **tails**. --&gt;
-&lt;!-- - Sometimes sequences like "HHHTHH" might emerge. --&gt;
-&lt;!-- - Does it mean heads are more likely? --&gt;
-
-&lt;!-- ## Toss More Times! --&gt;
-
-&lt;!-- - As we toss many more times, what happens to the ratio of heads to tails? --&gt;
-&lt;!-- ] --&gt;
-&lt;!-- ] --&gt;
-&lt;!-- .pull-right[ --&gt;
-
-&lt;!-- &lt;br&gt; --&gt;
-
-&lt;!-- ![](https://media.giphy.com/media/26gs8DLhlh9Drr7BS/giphy.gif) --&gt;
-
-&lt;!-- ] --&gt;
-
-
-&lt;!-- .footnote[[Demo: Flipping a coin](https://seeing-theory.brown.edu/basic-probability/index.html)] --&gt;
-
-&lt;!-- --- --&gt;
-
 ---
 
 
@@ -183,7 +152,7 @@ letter.
 .out-t[How often did you guess correctly?]
 ]
 
-<div class="countdown" id="timer_4009f60a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_cccdcc06" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -421,7 +390,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_45241d9e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_5ed149bf" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
