--- a/static/stat120/Day12.html
+++ b/static/stat120/Day12.html
@@ -37,6 +37,9 @@
 
 
 
+
+
+
 layout: true
   
 &lt;!-- &lt;div class="my-footer"&gt;&lt;span&gt;Stat 230&lt;/span&gt;&lt;/div&gt; --&gt;
@@ -53,7 +56,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- October 06 2023
+ January 28 2024
 
 
 ---
@@ -237,6 +240,45 @@ With the p-values: `\(0.005\)`, `\(0.15\)`, and `\(0.35\)`, which sample statist
 
 ---
 
+
+.code50[
+
+```r
+library(CarletonStats)
+FloridaLakes &lt;- read.csv("https://www.lock5stat.com/datasets2e/FloridaLakes.csv")
+permTestCor(FloridaLakes$pH, FloridaLakes$AvgMercury)
+
+	** Permutation test **
+
+ Permutation test with alternative: two.sided 
+ Observed correlation between FloridaLakes$pH ,  FloridaLakes$AvgMercury : -0.5754 
+ Mean of permutation distribution: -0.0047 
+ Standard error of permutation distribution: 0.13839 
+ P-value:  0.001 
+
+	*-------------*
+```
+
+&lt;img src="Day12_files/figure-html/unnamed-chunk-1-1.svg" width="50%" style="display: block; margin: auto;" /&gt;
+]
+
+
+
+&lt;center&gt;
+
+&lt;div style="position: absolute; top: 20%; left: 50%;"&gt;
+    &lt;span style="content: '\2192'; font-size: 30px; color: #920; text-align: center; white-space: pre-line;"&gt;
+        In R use &lt;span class="red bold"&gt;CarletonStats&lt;/span&gt; package
+    &lt;/span&gt;
+&lt;/div&gt;
+&lt;a&gt;&lt;/a&gt;
+
+&lt;/center&gt;
+
+
+---
+
+
 class: middle
 
 # Alternative Hypothesis
@@ -300,9 +342,74 @@ class: middle
 
 ---
 
+
+.code50[
+
+```r
+library(CarletonStats)
+SleepCaffeine &lt;- read.csv("https://www.lock5stat.com/datasets2e/SleepCaffeine.csv")
+permTest(SleepCaffeine$Words, SleepCaffeine$Group)
+
+	** Permutation test **
+
+ Permutation test with alternative: two.sided 
+ Observed statistic
+  Caffeine :  12.25 	 Sleep :  15.25 
+ Observed difference: -3 
+
+ Mean of permutation distribution: 0.01065 
+ Standard error of permutation distribution: 1.49692 
+ P-value:  0.0515 
+
+	*-------------*
+```
+
+&lt;img src="Day12_files/figure-html/unnamed-chunk-2-1.svg" width="50%" style="display: block; margin: auto;" /&gt;
+]
+
+
+&lt;center&gt;
+&lt;div style="position: absolute; top: 20%; left: 50%;"&gt;
+    &lt;span style="content: '\2192'; font-size: 30px; color: #920; text-align: center; white-space: pre-line;"&gt;
+        &lt;span class="red bold"&gt;Sleep Vs Caffeine&lt;/span&gt; 
+    &lt;/span&gt;
+&lt;/div&gt;
+&lt;a&gt;&lt;/a&gt;
+&lt;/center&gt;
+
+---
+
 class: middle
 
-## Coccaine Addiction
+## Independent vs. Dependent Samples
+
+.bq.font70[
+- **Independent samples**: No link between groups' observations.
+
+- **Dependent samples**: Observations are naturally paired.
+
+  - Example: Measurements before and after an intervention.
+]
+
+&lt;br&gt;
+
+.bqt.font60[
+
+### Hypothesis Testing for Paired Differences: `permTestPaired()`
+
+- Focus on the average of within-pair differences, `\(\mu_d = \mu_1 - \mu_2\)`.
+
+- Hypotheses:
+
+  - `\(H_0: \mu_d = 0\)` (no effect)
+  - `\(H_A: \mu_d \neq 0\)` (presence of effect)
+]
+
+---
+
+class: middle
+
+## Coccaine Addiction (Difference in Proportions)
 
 .bql[In a randomized experiment, 48 cocaine addicts attempting to quit were randomly assigned to take either desipramine (a new drug) or lithium (an existing drug) to test if `desipramine` is more effective than `lithium` at treating .b[cocaine addiction], with relapse as the response variable.
 ]
@@ -450,13 +557,13 @@ class: action
 &lt;br&gt;
 .bql[
 
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_36796cc0" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_aa1185e2" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
