--- a/static/stat220/Day11.html
+++ b/static/stat220/Day11.html
@@ -46,7 +46,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- January 25 2024
+ January 26 2024
 
 ---
 
@@ -324,7 +324,7 @@ class: middle
 ```r
 y &lt;- lubridate::now() # current date
 str_glue("today is {y}")
-today is 2024-01-25 22:02:45.931045
+today is 2024-01-26 07:35:06.488055
 ```
 
 
@@ -342,7 +342,7 @@ Hi, my name is Alex.
 ```r
 # base R equivalent
 paste0("today is ", y)
-[1] "today is 2024-01-25 22:02:45.931045"
+[1] "today is 2024-01-26 07:35:06.488055"
 ```
 
 
@@ -411,7 +411,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_c383ef13" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_9f1554ff" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -740,7 +740,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_553a4fc3" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_95a6ac41" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
