--- a/public/stat120/Day12.html
+++ b/public/stat120/Day12.html
@@ -56,7 +56,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- January 28 2024
+ January 29 2024
 
 
 ---
@@ -252,8 +252,8 @@ permTestCor(FloridaLakes$pH, FloridaLakes$AvgMercury)
 
  Permutation test with alternative: two.sided 
  Observed correlation between FloridaLakes$pH ,  FloridaLakes$AvgMercury : -0.5754 
- Mean of permutation distribution: -0.0047 
- Standard error of permutation distribution: 0.13839 
+ Mean of permutation distribution: 0.00525 
+ Standard error of permutation distribution: 0.14288 
  P-value:  0.001 
 
 	*-------------*
@@ -357,9 +357,9 @@ permTest(SleepCaffeine$Words, SleepCaffeine$Group)
   Caffeine :  12.25 	 Sleep :  15.25 
  Observed difference: -3 
 
- Mean of permutation distribution: 0.01065 
- Standard error of permutation distribution: 1.49692 
- P-value:  0.0515 
+ Mean of permutation distribution: -0.02042 
+ Standard error of permutation distribution: 1.51511 
+ P-value:  0.0512 
 
 	*-------------*
 ```
@@ -563,7 +563,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_aa1185e2" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_896e5aad" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
