--- a/static/stat220/Day12.html
+++ b/static/stat220/Day12.html
@@ -47,7 +47,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- January 28 2024
+ January 29 2024
 
 ---
 
@@ -495,7 +495,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_f005079b" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_674a6820" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -650,7 +650,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_24871c54" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_fe13ed66" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
