--- a/public/courses/stat120/week5/index.html
+++ b/public/courses/stat120/week5/index.html
@@ -53,7 +53,8 @@
     
   
   <meta name="description" content="Day 12 Slides (html)
-Day 13 Slides (html)" />
+Day 13 Slides (html)
+Day 14 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week5/" />
@@ -298,7 +299,8 @@ Day 13 Slides (html)" />
   <meta property="og:url" content="/courses/stat120/week5/" />
   <meta property="og:title" content="Week 5 | Deepak Bastola" />
   <meta property="og:description" content="Day 12 Slides (html)
-Day 13 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 13 Slides (html)
+Day 14 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -796,6 +798,7 @@ Day 13 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155
           <div class="article-style">
             <p>Day 12 Slides (<a href="/stat120/Day12.html" target="_blank">html</a>)</p>
 <p>Day 13 Slides (<a href="/stat120/Day13.html" target="_blank">html</a>)</p>
+<p>Day 14 Slides (<a href="/stat120/Day14.html" target="_blank">html</a>)</p>
 
           </div>
 
