--- a/public/stat220/Day15.html
+++ b/public/stat220/Day15.html
@@ -47,7 +47,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- February 06 2024
+ February 07 2024
 
 ---
 
@@ -395,7 +395,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_05dc5f74" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_5731e963" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -632,7 +632,7 @@ $z
 class: middle
 
 
-# `purrr:::map_df`
+# `purrr::map_df`
 
 &gt; In `purrr`, the `map_df` is equal to `lapply` + `bind_cols`:
 
@@ -812,7 +812,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_8120c70c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_54a63466" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
