--- a/static/stat220/Day16.html
+++ b/static/stat220/Day16.html
@@ -47,7 +47,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- February 08 2024
+ February 09 2024
 
 ---
 
@@ -535,7 +535,7 @@ MinnesotaVikings
 ```
 ]
 
-.footnote[Click [here]("https://www.pro-football-reference.com/teams/min/2023.htm) to go to webpage]
+.footnote[Click [here](https://www.pro-football-reference.com/teams/min/2023.htm) to go to webpage]
 
 
 ---
@@ -600,7 +600,7 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 .bql[
-- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
+- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
 - Get the class activity 16.Rmd file
 - Work on activity 1
 - Ask me questions
@@ -608,7 +608,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_589adb58" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_c1df4aa8" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
