--- a/public/stat120/Day18.html
+++ b/public/stat120/Day18.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- February 10 2024
+ February 13 2024
 
 
 ---
@@ -239,6 +239,24 @@ b).  No
 &lt;summary&gt;.red[Click for answer]&lt;/summary&gt;
 .hljs[The correct answer is a. With metal tags, 33 survived and 134 died.  With electronic tags, 68 survived and 121 died.  All counts are greater than 10.]
 &lt;/details&gt;
+
+---
+
+
+
+class: center, inverse, top
+background-image: url("images/pooled_proportion.png")
+background-size: cover
+
+## .bold[Pooled Proportion]
+
+&lt;center&gt;
+&lt;div style="position: absolute; top: 80%; left: 10%;"&gt;
+&lt;span style="content: '\2192'; font-size: 20px; color: #FFFFFF; text-align: center; white-space: pre-line;"&gt;
+  &lt;p&gt;&lt;strong&gt;Pooling is done to combine the data from both groups and come  &lt;br&gt; up with a combined proportion, assuming the groups are the same&lt;/strong&gt;&lt;/p&gt;
+&lt;/span&gt;
+&lt;/div&gt;
+&lt;/center&gt;
 
 ---
 
@@ -541,9 +559,9 @@ class: action
 
 ]
 
-<div class="countdown" id="timer_c6761456" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_5219db36" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">25</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 
