--- a/public/stat220/Day18.html
+++ b/public/stat220/Day18.html
@@ -47,7 +47,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- February 10 2024
+ February 13 2024
 
 
 
@@ -177,6 +177,19 @@ background-size: 100% 100%
 
 # .center[http://shinyapps.io/]
 
+---
+
+
+
+class: center, inverse, top
+background-image: url("images/shiny_Minnesota.png")
+background-size: 100% 100%
+
+&lt;br&gt;
+
+
+## https://deepbas.shinyapps.io/covid/
+
 
 ---
 
@@ -193,55 +206,16 @@ class: action, middle
 .bql[
 - Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
 - Get the class activity 18.Rmd file
-- Work on activity 1
+- Work on activity together with me
 - Ask me questions
 ]
 
 ]
 
-<div class="countdown" id="timer_ece1f8bb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_d77bf1bb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">30</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
-
-
----
-
-
-class: center, inverse, top
-background-image: url("images/shiny_Minnesota.png")
-background-size: 100% 100%
-
-&lt;br&gt;
-
-
-## https://deepbas.shinyapps.io/covid/
-
----
-
-class: action, middle
-
-# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Group&amp;nbsp;Activity&amp;nbsp;2&lt;/i&gt;    
-
-
-.pull-left-40[
-![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
-]
-.pull-right-60[
-&lt;br&gt;
-.bq[
-- Let's go over to class activity 18 .Rmd file on class [moodle](https://moodle.carleton.edu/course/view.php?id=41417) and practice building a shiny app together
-- Ask me questions
-]
-
-]
-
-<div class="countdown" id="timer_5c5ca450" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
-<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
-
-
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
