--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -53,7 +53,8 @@
     
   
   <meta name="description" content="Day 17 Slides (html)
-Day 18 Slides (html)" />
+Day 18 Slides (html)
+Day 19 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week7/" />
@@ -298,7 +299,8 @@ Day 18 Slides (html)" />
   <meta property="og:url" content="/courses/stat220/week7/" />
   <meta property="og:title" content="Week 7 | Deepak Bastola" />
   <meta property="og:description" content="Day 17 Slides (html)
-Day 18 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 18 Slides (html)
+Day 19 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -804,6 +806,7 @@ Day 18 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155
           <div class="article-style">
             <p>Day 17 Slides (<a href="/stat220/Day17.html" target="_blank">html</a>)</p>
 <p>Day 18 Slides (<a href="/stat220/Day18.html" target="_blank">html</a>)</p>
+<p>Day 19 Slides (<a href="/stat220/Day19.html" target="_blank">html</a>)</p>
 
           </div>
 
