--- a/static/stat120/Day19.html
+++ b/static/stat120/Day19.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- February 10 2024
+ February 15 2024
 
 
 ---
@@ -644,112 +644,6 @@ c) `\(2 \cdot \mathrm{t}^* \cdot \frac{s}{\sqrt{n}}\)`
 `\(\text {CI = statistic } \pm \text { margin of error }\)`
 &lt;/details&gt;
 
----
-
-class: middle
-
-# Chips Ahoy!
-
-.hljs[A group of Air Force cadets bought bags of Chips Ahoy! cookies from all over the country to verify this claim.  They hand counted the number of chips in 42 bags.]
-
-
-.pull-left[
-
-&lt;center&gt;
-&lt;img src="images/chipsahoy.png", width="95%" height="90%"&gt; &lt;br&gt;
-&lt;/center&gt;
-
-
-]
-
-.pull-right[
-
-.bql[
-`\begin{aligned}
-&amp; \bar{x}=1261.6 \text { chips } \\
-&amp; s=117.6 \text { chips } \\
-&amp; n=42 \text { bags }
-\end{aligned}`
-]
-
-]
-
-
-
-.footnote[
-Source: Warner, B. `\(\&amp;\)` Rutledge, J. (1999). “Checking the Chips Ahoy! Guarantee,” Chance, 12(1).
-]
-
----
-
-class: middle
-
-# Chips Ahoy! Hypothesis Test
-
-
-.pull-left-60[
-.bql.font90[
-
-1. State hypotheses: `\(H_0: \mu=1000 \quad \&amp; \quad H_a: \mu&gt;1000\)`
-
-2. Check conditions:  `\(n=42 \geq 30 \quad\)` ✅
-
-3. Calculate test statistic: `$$t=\frac{\bar{X}-\mu_0}{s / \sqrt{n}}=\frac{1261.6-1000}{117.6 / \sqrt{42}}=14.4$$`
-
-4. Compute p-value: `\(p-\)` value `\(\approx 0\)`
-
-5. Interpret in context:
-
-]
-
-]
-
-.pull-right-40[
-
-&lt;center&gt;
-&lt;img src="images/chipsahoy_pvalue.png", width="100%" height="100%"&gt; &lt;br&gt;
-&lt;/center&gt;
-
-.hljs.yellow-h[This provides extremely strong evidence that the average number of chips per bag of Chips Ahoy! cookies is significantly greater than 1000.]
-
-]
-
-
-
----
-
-class: middle
-
-# Chips Ahoy! Give a 99% confidence interval for the average number of chips in each bag.
-
-.pull-left-60[
-
-.bql.font90[
-
-1. State hypotheses: `\(H_0: \mu=1000 \quad \&amp; \quad H_a: \mu&gt;1000\)`
-
-2. Check conditions:  `\(n=42 \geq 30 \quad\)` ✅
-
-3. Find `\(t^*\)`: `\(t^*=2.7\)`
-
-4. Compute confidence interval: `\(\begin{aligned}  \bar{X} \pm t^* \times \frac{s}{\sqrt{n}} &amp;=  1261.6 \pm 2.7 \times \frac{117.6}{\sqrt{42}} \\ &amp; = (1212.6,1310.6)\end{aligned}\)`
-
-5. Interpret in context:
-
-
-]
-
-]
-
-.pull-right-40[
-
-&lt;center&gt;
-&lt;img src="images/chipsahoy_ci.png", width="100%" height="100%"&gt; &lt;br&gt;
-&lt;/center&gt;
-
-.hljs[We are 99% confident that the average number of chips per bag of Chips Ahoy! cookies is between 1212.6 and 1310.6 chips.]
-
-]
 
 ---
 
@@ -770,9 +664,9 @@ class: action
 
 ]
 
-<div class="countdown" id="timer_e1f2c106" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_02fb952c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">30</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
